--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -80,7 +80,7 @@ $violet-horizontal-scrollbar-track: #fff;
 $violet-horizontal-scrollbar-thumb: #b8bcfd;
 $violet-active-board-marker: #fff;
 $violet-active-board-bg: rgba(255, 255, 255, 0.2);
-$violet-bell-color:rgba(82, 85, 188, 1);
+$violet-bell-color: rgba(82, 85, 188, 1);
 
 //Welcome
 $welcome-background: linear-gradient(
@@ -90,7 +90,8 @@ $welcome-background: linear-gradient(
 );
 $welcome-dark-color: #161616;
 $welcome-light-color: #fff;
-$link-background: rgba(176, 234, 147, 0.515);
+$welcom-gray-color: rgba(141, 141, 141, 0.2);
+$welcom-gray-line: rgba(141, 141, 141, 0.5);
 
 //Register-Login
 $form-background: #151515;
