--- a/src/pages/welcome/welcome.module.scss
+++ b/src/pages/welcome/welcome.module.scss
@@ -96,47 +96,29 @@
   letter-spacing: -0.02em;
 }
 
-.registrationLink {
+.buttonLink {
   @include mobile {
     width: 335px;
-  }
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: calc(100% - 40px);
-  height: 49px;
-  padding: 14px;
-  margin-bottom: 14px;
-  color: $welcome-light-color;
-  text-align: center;
-  font-size: 14px;
-  font-weight: 500;
-  letter-spacing: -0.02em;
-  border-radius: 8px;
-  background: $welcome-dark-color;
-  transition: 500ms ease-in-out;
-  cursor: pointer;
-
-  &:hover,
-  &:focus {
-    background: $link-background;
-    color: $welcome-dark-color;
   }
 
   @include tablet {
     width: 344px;
   }
-}
 
-.logInLink {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 49px;
+  padding: 14px;
   margin-bottom: 14px;
-  text-decoration: none;
   color: $welcome-dark-color;
+  text-align: center;
   font-size: 14px;
   font-weight: 500;
   letter-spacing: -0.02em;
-  padding: 10px 20px;
   border-radius: 8px;
+  background: $welcom-gray-color;
   transition: 500ms ease-in-out;
   cursor: pointer;
 
@@ -145,4 +127,86 @@
     background: $welcome-dark-color;
     color: $welcome-light-color;
   }
+}
+
+.choiceLine {
+  @include mobile {
+    width: 335px;
+  }
+
+  @include tablet {
+    width: 344px;
+  }
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  margin-bottom: 14px;
+
+  color: $welcom-gray-line;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  letter-spacing: 0.2px;
+}
+
+.choiceLine::after,
+.choiceLine::before {
+  content: '';
+  position: relative;
+  top: 1px;
+  width: 100%;
+  height: 1px;
+  background-color: $welcom-gray-line;
+}
+
+.choiceLine::before {
+  margin-right: 12px;
+}
+
+.choiceLine::after {
+  margin-left: 12px;
+}
+
+.googleButton {
+  @include mobile {
+    width: 335px;
+  }
+
+  @include tablet {
+    width: 344px;
+  }
+
+  display: block;
+  height: 50px;
+  width: 100%;
+  text-align: center;
+
+  font-family: Roboto, arial, sans-serif;
+  font-size: 16px;
+  line-height: 48px;
+
+  background-color: rgb(66, 133, 244);
+  color: rgb(255, 255, 255);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 4px 0px;
+  border: none;
+  transition: background-color 0.218s ease 0s, box-shadow 0.218s ease 0s;
+  cursor: pointer;
+
+  &:hover {
+    box-shadow: rgba(66, 133, 244, 0.3) 0px 0px 3px 3px;
+  }
+}
+
+.logoGoogleBox {
+  width: 48px;
+  height: 48px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 1px;
+  float: left;
+  background-color: $welcome-light-color;
 }
